--- a/src/drumee/builtins/window/adminpanel/pages/domain-page/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/domain-page/skin/index.scss
@@ -41,13 +41,13 @@
     //@include typo($size: 20px, $line: 20px, $color: var(--egrey-2f)); 
     justify-content: flex-end;
     text-align: right;
-    @include typo($size: 16px, $line: 24px, $color:$admin-default-text-color);// var(--egrey-49)); 
+    @include typo($size: 16px, $line: 24px, $color: var(--default-text-color));// var(--egrey-49)); 
   }
   &__row_form_field{
     cursor: pointer;
-    @include typo($size: 16px, $line: 20px, $color: $admin-default-text-color); 
+    @include typo($size: 16px, $line: 20px, $color: var(--default-text-color)); 
     .copied-to-clipboard{
-      @include typo($size: 14px, $line: 20px, $color: $admin-default-text-color);//$weight:300
+      @include typo($size: 14px, $line: 20px, $color: var(--default-text-color));//$weight:300
       position: absolute;
       left: -30px;
       top:100%;
@@ -70,20 +70,20 @@
     grid-template-columns: 50% 50%;
     min-height: 32px;
     & .domain-page__entry[data-status=error] input {
-      border-color: $admin-default-border-error  !important; //#ff4578
+      border-color: var(--default-border-error)  !important; //#ff4578
     }
     & .entry-reminder__main input{
-      border-bottom: 1px solid $admin-default-entry-border-bottom;//var(--egrey-b6);
-      @include typo($size: 16px, $line: 24px, $color: $admin-default-text-color);//var(--egrey-3f));
+      border-bottom: 1px solid var(--default-entry-border-bottom);//var(--egrey-b6);
+      @include typo($size: 16px, $line: 24px, $color: var(--default-text-color));//var(--egrey-3f));
       
       &:focus{     
-        border-color:$admin-focus-border-placeholder;//var(--eblue);   
+        border-color:var(--focus-border-placeholder);//var(--eblue);   
         &::placeholder {
-          color: $admin-text-placeholder-focus;// var(--eblue);
+          color: var(--focus-text-placeholder);// var(--eblue);
         }
       }
       &::placeholder {
-        color: $admin-default-text-placeholder;//var(--egrey-b6);
+        color: var(--default-text-placeholder);//var(--egrey-b6);
       }
     }
   }
@@ -92,7 +92,7 @@
       @include typo($size: 16px, $line: 24px, $color: var(--egrey-b6));
     }
     &.view, &.edit{
-      @include typo($size: 16px, $line: 24px, $color: $admin-secondary-text-color);
+      @include typo($size: 16px, $line: 24px, $color: var(--secondary-text-color));
     }
   }
   &__button-confirm,
