--- a/src/drumee/builtins/window/adminpanel/pages/broadcast-message/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/broadcast-message/skin/index.scss
@@ -44,7 +44,7 @@
 
   &__note {
     &.header {
-      @include typo($size: 18px, $line: 16px, $color: $admin-secondary-text-color);
+      @include typo($size: 18px, $line: 16px, $color: var(--secondary-text-color));
     }
   }
 
@@ -52,7 +52,7 @@
     cursor: pointer;
     
     &.select-member {
-      color: $admin-secondary-text-color;
+      color: var(--secondary-text-color);
       height: 18px;
       left: 20px;
       top: 1px;
@@ -67,7 +67,7 @@
 
       & textarea {
         border-radius: $default-border-radius;
-        @include typo($size: 14px, $line: 20px, $color: $admin-default-text-color);
+        @include typo($size: 14px, $line: 20px, $color: var(--default-text-color));
         background: #f7f7f9 ; //$ap-textarea-background;
         border: none;
         height: 100%;
@@ -81,7 +81,7 @@
         padding: 15px 20px;
 
         &::placeholder {
-          @include typo($size: 14px, $weight: 300, $color:$admin-default-text-placeholder);
+          @include typo($size: 14px, $weight: 300, $color: var(--default-text-placeholder));
         }
   
         &:focus {
