--- a/src/drumee/builtins/window/adminpanel/pages/members/skin/connection-log.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/members/skin/connection-log.scss
@@ -1,6 +1,6 @@
 &-connection-log {
   &__main {
-    background:$admin-default-background;
+    background:var(--default-background);
     border-radius: $default-border-radius;
     height: calc(100% - 100px);
     min-width: 300px;
@@ -28,25 +28,25 @@
   }
 
   &__icon {
-    color: $admin-default-icon-neutral;
+    color: var(--default-icon-neutral);
     cursor: pointer;
     height: 12px;
     width: 12px;
 
     &.close {
-      color: $admin-default-thinline-icon;
+      color: var(--default-thinline-icon);
       
       &:hover {
-        color: $admin-default-thinline-icon-hover;
+        color: var(--default-thinline-icon-hover);
       }
     }
   }
 
   &__note {
-    @include typo($size: 18px, $line: 19px, $color: $admin-default-text-color);
+    @include typo($size: 18px, $line: 19px, $color: var(--default-text-color));
 
     &.header {
-      color: $admin-default-text-title;
+      color: var(--default-text-title);
       justify-content: center;
       width: 100%;
     }
@@ -89,10 +89,10 @@
       }
 
       &:hover {
-        background:$admin-default-background-hover;
+        background:var(--default-background-hover);
 
         & .data-cell {
-          color: $admin-default-text-reverse;
+          color: var(--default-text-reverse);
         }
 
         &.default-content {
@@ -105,17 +105,17 @@
       align-items: center;
       height: 100%;
       justify-content: space-evenly;
-      @include typo($size: 14px, $line: 14px,$weight: 300,$color: $admin-default-text-color);
+      @include typo($size: 14px, $line: 14px,$weight: 300,$color: var(--default-text-color));
       width: 120px;
 
       &.header {        
-        @include typo($size: 15px, $line: 14px, $color: $admin-default-text-title);
+        @include typo($size: 15px, $line: 14px, $color: var(--default-text-title));
         margin-top: auto;
         margin-bottom: auto;
       }
 
       &.default-content {
-        @include typo($size: 16px, $line: 16px, $color: $admin-default-text-color);
+        @include typo($size: 16px, $line: 16px, $color: var(--default-text-color));
         width: 100%;
         justify-content: center;
       }
