--- a/src/drumee/builtins/window/adminpanel/pages/members/skin/import.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/members/skin/import.scss
@@ -1,5 +1,5 @@
 &__members_upload_wrapper {
-  background: $admin-default-background;
+  background: var(--default-background);
   border-radius: $default-border-radius;
   height: calc(100% - 30px);
   width: calc(100% - 30px);
@@ -7,7 +7,7 @@
 }
 
 &__members_upload-close-wrapper {
-  color: $admin-default-thinline-icon;
+  color: var(--default-thinline-icon);
   height: 14px;
   margin: 12px;
   position: absolute;
@@ -16,7 +16,7 @@
   width: 14px;
   z-index: 2;
   &:hover{
-    color:$admin-default-thinline-icon-hover;
+    color:var(--default-thinline-icon-hover);
   }
 
   & svg {
@@ -25,7 +25,7 @@
 }
 
 &__members_upload-title-wrapper {
-  @include typo($size: 18px, $color: $admin-default-text-title);
+  @include typo($size: 18px, $color: var(--default-text-title));
   align-items: center;
   justify-content: center;
   margin: 10px;
@@ -33,7 +33,7 @@
 }
 
 &__members_drag-area {
-  background: $admin-default-background;
+  background: var(--default-background);
   padding: 0px 20px 0px 20px;
   position: absolute;
   z-index: 2;
@@ -65,7 +65,7 @@
   }
   .alert{
     text-align:center;
-    @include typo($size: 20px, $line: 23px, $color: $admin-default-text-alert);
+    @include typo($size: 20px, $line: 23px, $color: var(--default-text-alert));
   }
 }
 
@@ -75,9 +75,9 @@
   position: absolute;
   text-align: center;
   text-decoration: underline;
-  @include typo($size: 16px, $line: 16px,$weight:300, $color: $admin-default-text-color);
+  @include typo($size: 16px, $line: 16px,$weight:300, $color: var(--default-text-color));
   &:hover{
-    color:$admin-backgroundless-text-hover ;
+    color:var(--backgroundless-text-hover);
   }
 }
 
@@ -126,11 +126,11 @@
 }
 
 &__import-list-item-header {
-  @include typo($size: 14px, $color: $admin-secondary-text-color);
+  @include typo($size: 14px, $color: var(--secondary-text-color));
 }
 
 &__import-list-item-content {
-  @include typo($size: 14px, $weight:300, $color: $admin-default-text-color);
+  @include typo($size: 14px, $weight:300, $color: var(--default-text-color));
 }
 
 &__import-list-item-header,
@@ -141,9 +141,9 @@
   &.error {
     // box-shadow: inset 0px 0px 4px 0px rgba(255, 0, 0, 0.5);
     border-radius: 5px;
-    color:$admin-default-text-error;  //$ap-import-error-color;
+    color:var(--default-text-error);  //$ap-import-error-color;
     &.require{
-      background: $admin-default-background-error;
+      background: var(--default-background-error);
       opacity: 0.2;
     }
   }
@@ -155,7 +155,7 @@
   justify-content: center;
   & .note-content{
     text-align: center;
-    color:$admin-default-text-error; 
+    color:var(--default-text-error); 
   }
 }
 
