--- a/src/drumee/builtins/window/adminpanel/widget/dropdown-menu/skin/card-menu.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/dropdown-menu/skin/card-menu.scss
@@ -19,7 +19,7 @@
 
   &__input_wrapper {
     align-items: center;
-    background: $admin-default-background;
+    background: var(--default-background);
     border-radius: $default-border-radius;
     cursor: pointer;
     height: 28px;
@@ -29,12 +29,12 @@
     & .note-reader {
       justify-content: center;
       width: 100%;
-      @include typo($size: 14px, $line: 14px,$color: $admin-default-text-color);
+      @include typo($size: 14px, $line: 14px,$color: var(--default-text-color));
     }     
   }
 
   &__icon-dropdown {
-    color: $admin-default-icon-neutral;
+    color: var(--default-icon-neutral);
     height: 12px;
     position: absolute;
     right: 5px;
@@ -49,13 +49,13 @@
   &__wrapper {
     &[data-state="1"] {
       & .trigger-icon {
-        color: $admin-default-icon-active;
+        color: var(--default-icon-active);
       }
     }
 
     & .menu-topic-items {
       border-radius:$default-border-radius;
-      background-color: $admin-default-background;    
+      background-color: var(--default-background);    
       box-shadow: var(--shadow-container);
       max-width: 130px;
       min-width: 120px;
@@ -65,7 +65,7 @@
       padding:10px;
       }
       &:before {
-        background-color: $admin-default-background;    
+        background-color: var(--default-background);    
         box-shadow: -4px -6px 10px 1px rgba(63,79, 117, 0.13);
         content: "";
         height: 10px;
@@ -77,7 +77,7 @@
       }
 
       &:after {
-        background: $admin-default-background;    
+        background: var(--default-background);    
         border-radius: $default-border-radius-top;
         content: "";
         height: 10px;
@@ -91,7 +91,7 @@
 
   &__icon {
     align-items: center;
-    color: $admin-default-icon-neutral;
+    color: var(--default-icon-neutral);
     cursor: pointer;
 
     &.trigger-icon {
@@ -105,31 +105,31 @@
     margin-bottom:  1px;
     margin-top:  1px;
     padding: 8px 8px 8px 10px;
-    @include typo($size: 12px, $line: 14px, $color:$admin-default-text-color);
+    @include typo($size: 12px, $line: 14px, $color: var(--default-text-color));
 
     &.disable {
       opacity: 0.4;
       pointer-events: none;
-      @include typo($size: 12px, $line: 14px,$weight:300,$color:$admin-default-background-inactive);
+      @include typo($size: 12px, $line: 14px,$weight:300,$color: var(--default-background)-inactive);
     }
 
     &:hover {
-      background-color: $admin-default-background-hover;
-      color : $admin-default-text-hover ; 
+      background-color: var(--default-background-hover);
+      color : var(--default-text-hover); 
 
       & .widget-dropdown-menu-menu__note {
-        color:$admin-default-text-hover; 
+        color:var(--default-text-hover); 
       }
       
       & svg {
-        fill: $admin-default-icon-reverse;  
+        fill: var(--default-icon-reverse);  
       }
     }
   }
 
   &__note {
     padding-top: 0px;
-    @include typo( $size:14px, $weight: 300, $line: 14px, $color: $admin-default-text-color);
+    @include typo( $size:14px, $weight: 300, $line: 14px, $color: var(--default-text-color));
 
     &.coming-soon {
       opacity: 0.4;
