--- a/src/drumee/builtins/window/adminpanel/widget/member-roles-menu-items/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-roles-menu-items/skin/index.scss
@@ -5,15 +5,15 @@
     background-color: inherit;
     &:hover{
       *{
-      background-color:$admin-default-background-hover;
-      color:$admin-default-text-hover;
+      background-color:var(--default-background-hover);
+      color:var(--default-text-hover);
       svg{
          border-radius: var(--border-radius-tiny); 
       }
       &.checkbox[data-state="1"] {
         box-shadow: none;
-        color: $admin-checkbox-checked-reverse;
-        border: 1px solid $admin-checkbox-checked-border-reverse;
+        color: var(--checkbox-checked-reverse);
+        border: 1px solid var(--checkbox-checked-border-reverse);
         border-radius:$default-checkbox-border-radius;
       }
       }
@@ -34,7 +34,7 @@
   &__note {
     max-width: 105px;
     width: 100%;
-    @include typo($size: 12px,$weight:300,  $line: 24px, $color: $admin-default-text-color);
+    @include typo($size: 12px,$weight:300,  $line: 24px, $color: var(--default-text-color));
     @include overflow-text;
    .inner{
       overflow: hidden;
@@ -47,8 +47,8 @@
     box-shadow: none;
     cursor: pointer;
     margin-left: 0px; 
-    border:1px solid $admin-default-checkbox-border;
-    color:$admin-default-checkbox-background;
+    border:1px solid var(--default-checkbox-border);
+    color:var(--default-checkbox-background);
     border-radius:$default-checkbox-border-radius;
     svg{
       width: 14px;
@@ -57,8 +57,8 @@
     &[data-state="1"] {
       box-shadow: none;
      
-      border: 1px solid $admin-default-checkbox-border;
-      color:$admin-default-checkbox-checked ;
+      border: 1px solid var(--default-checkbox-border);
+      color:var(--default-checkbox-checked);
     }
   }
 }
