--- a/src/drumee/builtins/window/adminpanel/widget/member-roles-menu/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-roles-menu/skin/index.scss
@@ -17,12 +17,12 @@
   &__wrapper {
     &[data-state="1"] {
       & .trigger-icon {
-        color: $admin-default-icon-active;
+        color: var(--default-icon-active);
       }
     }
 
     & .menu-topic-items {
-      background-color: $admin-default-background;
+      background-color: var(--default-background);
       border-radius:$default-border-radius;
       box-shadow:$drumee-container-dropdown;
       max-height: 250px;
@@ -36,7 +36,7 @@
        
       }
       &:before {
-        background-color: $admin-default-background;
+        background-color: var(--default-background);
         box-shadow:var(--shadow-before);
         content: "";
         height: 10px;
@@ -48,7 +48,7 @@
       }
 
       &:after {
-        background: $admin-default-background;         
+        background: var(--default-background);         
         border-radius: $default-border-radius-top;
         content: "";
         height: 10px;
@@ -77,7 +77,7 @@
     
 
   &__icon {
-    color: $admin-default-icon-neutral;
+    color: var(--default-icon-neutral);
     cursor: pointer;
 
     &.trigger-icon {
@@ -86,7 +86,7 @@
       width: 22px;
     }
     &:hover{
-      color:$admin-default-icon-hover;
+      color:var(--default-icon-hover);
     }
   }
 
@@ -96,15 +96,15 @@
     padding: 8px 8px 8px 10px;
 
     &:hover {
-      background-color: $admin-default-background-hover;
-      color:$admin-default-text-hover ;
+      background-color: var(--default-background-hover);
+      color:var(--default-text-hover);
 
       & .widget-member-rolesMenu__note {
-        color: $admin-default-text-reverse;
+        color: var(--default-text-reverse);
       }
       
       & svg {
-        fill: $admin-default-icon-reverse;
+        fill: var(--default-icon-reverse);
       }
     }
   }
@@ -161,10 +161,10 @@
       &.title {
         justify-content: center;
         margin-top: -5px;
-        @include typo($size: 14px, $line: 28px, $weight:300, $color: $admin-default-text-title);
+        @include typo($size: 14px, $line: 28px, $weight:300, $color: var(--default-text-title));
       }
       &.name {
-        @include typo($size: 14px, $line: 14px, $weight: 300, $color: $admin-default-text-color);
+        @include typo($size: 14px, $line: 14px, $weight: 300, $color: var(--default-text-color));
         justify-content: center;
         padding-bottom:15px;
         padding-left: 4px;
